@@ -33,8 +33,10 @@ if (empty ($gallery->album) || !$gallery->album->isLoaded()) {
 }
 
 // Further hack check
-if (!$gallery->user->canViewComments($gallery->album) &&
-	(! isset($gallery->app->comments_overview_for_all) || $gallery->app->comments_overview_for_all != "yes"))
+if (! ($gallery->user->isAdmin() ||
+       $gallery->user->isOwnerOfAlbum($gallery->album) ||
+       ( $gallery->user->canViewComments($gallery->album) && isset($gallery->app->comments_overview_for_all) && $gallery->app->comments_overview_for_all == "yes")
+      ))
 {
 	printPopupStart(gTranslate('core', "View Comments"));
 	showInvalidReqMesg();
